--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-
-<link href="css/style.css" rel="stylesheet"></head>
-
-<body>
-
-    <div class="tree" data-src="asdsa"></div>
-    dasdasdas
-<script type="text/javascript" src="js/app.js"></script></body>
-
-</html>
+<!doctype html> <html> <head> <meta charset=UTF-8 /> <title>Home</title> <link href="style.css?805310232d96c2cc1d30" rel="stylesheet"></head> <body> <div class=tree data-src=asdsa></div> <svg> <use xlink:href=sprite.svg#github></use> </svg> <div>asasdasddsad</div> <script type="text/javascript" src="app.js?805310232d96c2cc1d30"></script></body> </html> 
