--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Home</title>
-
-</head>
-
-<body>
-
+  </head>
+  <body>
     <div class="tree" data-src="asdsa"></div>
-    dasdasdas
-</body>
-
+    <svg>
+      <use xlink:href="sprite.svg#github"></use>
+    </svg>
+    <div>asasdasddsad</div>
+  </body>
 </html>
